@startuml

title __GREEKINFOTAINMENT's Class Diagram__\n

  namespace  {
    class Hint {
    }
  }
  

  namespace  {
    class Logbook {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class Player {
    }
  }
  

  namespace  {
    class Quiz {
    }
  }
  

  namespace  {
    class Room {
    }
  }
  

  namespace  {
    class SoundController {
    }
  }
  

  namespace  {
    class Space {
    }
  }
  

  namespace  {
    class TextBox {
    }
  }
  

  Logbook o-- Main : main
  Main -up-|> processing.core.PApplet
  Main o-- SoundController : correct
  Main o-- Room : currentRoom
  Main o-- SoundController : interact
  Main o-- Logbook : l1
  Main o-- Player : p1
  Main o-- Quiz : q1
  Main o-- SoundController : wrong
  Player o-- Main : main
  Player o-- TextBox : t1
  Quiz o-- Main : main
  Room o-- Logbook : log
  Space o-- Room : r
  TextBox o-- Main : main


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
